add 帖子详情接口
